<resources>
    <string name="app_name">prueba_repo</string>
    <string name="tv_ingreso">INGRESO</string>
    <string name="tv_text1">Por favor ingrese su información</string>
    <string name="et_correo">Ingrese su correo</string>
    <string name="et_contraseña">Ingrese su contraseña</string>
    <string name="button_ingresar">INGRESAR</string>
    <string name="cb_recordarme">Recordarme</string>
    <string name="button_registro">REGISTRARSE</string>
    <string name="Historial">Historial_Amb</string>
    <string name="Historial1">Historial_Usu</string>
    <string name="Perfil">Perfil_amb</string>
    <string name="Perfil1">Perfil_usu</string>
    <string name="Notificaciones">Notificaciones_Amb</string>
    <string name="Notificaciones1">Notificaciones_Usu</string>
    <string name="Configuración">Configuración</string>
    <string name="Ayuda">Help</string>
    <string name="Inicio">Inicio</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>

</resources>