<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoambulapp"
    android:backgroundTint="#DCDAE4EA"
    android:backgroundTintMode="multiply"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="115dp"
        android:layout_height="31dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="104dp"
        android:text="@string/tv_ingreso"
        android:textColor="#3D5AFE"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/et_correo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.497" />

    <EditText
        android:id="@+id/et_correo"
        android:layout_width="221dp"
        android:layout_height="57dp"
        android:layout_marginStart="104dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/et_correo"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/et_contraseña"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_contraseña"
        android:layout_width="223dp"
        android:layout_height="53dp"
        android:layout_marginStart="104dp"
        android:ems="10"
        android:hint="@string/et_contraseña"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.601" />

    <Button
        android:id="@+id/btn_ingresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="32dp"
        android:background="#C41C80EC"
        android:onClick="login"
        android:text="@string/button_ingresar"
        android:textColor="#F6F4F4"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="309dp"
        android:layout_height="34dp"
        android:layout_marginStart="60dp"
        android:text="@string/tv_text1"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/et_correo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.714" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="138dp"
        android:layout_height="59dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="56dp"
        android:text="@string/cb_recordarme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_contraseña" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="278dp"
        android:layout_height="162dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/logoambulaap"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>